# slambda

./: .editorconfig  .gitignore  .hlint.yaml  flake.nix  slambda.cabal
app/: Main.hs
