cabal-version: 3.0
name:          slambda
version:       0.1.0.0
build-type:    Simple

executable slambda
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.15.1.0,
        megaparsec,
        parser-combinators
